# numina

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
numina/classes/laplace-expression/: README.md
numina/classes/laplace-expression/include/numina/: laplace-expression.hpp
numina/classes/laplace-expression/src/: term.hpp
numina/classes/laplace-expression/src/terms/base-terms/: cos-term.hpp  exp-cos-term.hpp  exp-term.hpp
numina/classes/laplace-expression/src/terms/poly-terms/: cos-poly-term.hpp  exp-cos-poly-term.hpp  exp-poly-term.hpp  poly-term.hpp
numina/classes/laplace-expression/src/terms/time-terms/: cos-time-term.hpp  exp-cos-time-term.hpp  exp-time-term.hpp  time-term.hpp
numina/classes/poly-solver/: README.md
numina/classes/poly-solver/docs/: algorithm.md  test-report.md
numina/classes/poly-solver/include/numina/: poly-solver.h
numina/classes/poly-solver/src/: solve.cpp
numina/classes/poly-solver/src/core/: deflate.cpp  evaluate.cpp  evaluate.hpp  prepare.cpp
numina/classes/poly-solver/src/internal/: analytical.cpp  calculate.cpp  deflate.cpp  solve.cpp  state.cpp
numina/classes/poly-solver/src/methods/: laguerre.cpp  newton.cpp
numina/classes/poly-solver/src/solve/: poly-solver.cpp  solve-api.cpp
numina/classes/poly-solver/tests/: poly-solver-test.cpp
numina/classes/poly-solver/tests/data/: close-cluster.txt  close-roots.txt  complex-roots.txt  extreme-coeffs.txt  large-magnitude.txt  large-scale.txt  multiple-roots.txt  random.txt  small-coeffs.txt  wilkinson.txt
numina/classes/polynomial/: README.md
numina/classes/polynomial/include/numina/: polynomial.h
numina/classes/polynomial/src/: compose.cpp  divmod.cpp  gcd.cpp
numina/classes/polynomial/src/core/: assignment.cpp
numina/classes/polynomial/src/internal/: remove-leading-zeros.cpp
numina/classes/polynomial/src/operators/: analytical.cpp  arithmetic.cpp  assignment.cpp  bool-ops.cpp  io-ops.cpp  scalar-ops.cpp
numina/classes/polynomial/src/roots/: multiplicity.cpp  root.cpp
numina/classes/quadratic-deriv-poly/include/numina/: quadratic-deriv-poly.h
numina/classes/quadratic-deriv-poly/src/: quadratic-deriv-poly.cpp
numina/classes/terms/: README.md  term-expression.hpp  term.hpp
numina/classes/terms/src/: term.hpp
numina/classes/terms/src/terms/base-terms/: cos-term.hpp  exp-cos-term.hpp
numina/classes/terms/src/terms/poly-terms/: poly-term.hpp
numina/classes/terms/src/terms/time-terms/: cos-time-term.hpp  time-term.hpp
numina/classes/terms/terms/poly-terms/: cos-poly-term.hpp  exp-cos-poly-term.hpp
numina/classes/terms/terms/terms/: cos-term.hpp  exp-cos-term.hpp  exp-term.hpp
numina/classes/terms/terms/time-terms/: cos-time-term.hpp  exp-cos-time-term.hpp  exp-time-term.hpp  time-term.hpp
numina/classes/terms/time-terms/: poly-terms.hpp  time-terms.hpp  utime-terms.hpp
numina/classes/terms/time-terms/poly-terms/: cos-poly-term.hpp  exp-cos-poly-term.hpp  exp-poly-term.hpp  poly-term.hpp
numina/classes/terms/time-terms/terms/: cos-term.hpp  exp-cos-term.hpp  exp-term.hpp
numina/classes/terms/time-terms/time-terms/: cos-time-term.hpp  exp-cos-time-term.hpp  exp-time-term.hpp  time-term.hpp
numina/classes/transfer-function/: constructors.cpp  transfer-function.hpp
numina/fraction/: invlaplace.hpp  parfrac.hpp
numina/matrix/: solve.hpp
numina/polynomial/: deflate.hpp  multiply.hpp  solve.hpp
numina/terms/: term-expression.hpp
numina/terms/time-terms/: time-terms.hpp
